# ch.grischamedia.inventree.ean

./: LICENSE  MANIFEST.in  README.md  setup.cfg
gm_ean/: __init__.py  plugin.py  utils.py
gm_ean/static/gm_ean/: panel.js
gm_ean/templates/gm_ean/: part_panel.html
