[metadata]
name = ch.grischamedia.inventree.ean
version = 1.0.5
description = EAN/GTIN Plugin für InvenTree 0.18 (Erfassen, Validieren, Scannen)
long_description = file: README.md
long_description_content_type = text/markdown
author = GrischaMedia
author_email = info@grischamedia.ch
url = https://grischamedia.ch
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.10

[options.entry_points]
inventree_plugins =
    gm-ean = gm_ean.plugin:GrischaMediaEANPlugin